# myPaint

./: CMakeLists.txt  main.cpp  task.md
include/: TrialChecker.h  brush.h  canvas.h  circleshape.h  layer.h  lineshape.h  palette.h  polygonshape.h  rectangleshape.h  shape.h  triangleshape.h
src/: TrialChecker.cpp  brush.cpp  canvas.cpp  circleshape.cpp  layer.cpp  lineshape.cpp  palette.cpp  polygonshape.cpp  rectangleshape.cpp  shape.cpp  triangleshape.cpp
